<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="about">About</string>

    <string name="all_things">All Things</string>
    <string name="my_things">My Things</string>
    <string name="add_thing">Add Thing</string>
    <string name="find_thing">Find Thing</string>
    <string name="thing_posted_in">Posted in %1$s</string>
    <string name="thing_posted_in_at">Posted in %1$s at %2$s</string>

    <!-- Main Screen -->
    <string name="drawer_things">Things</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_nearby_things">Nearby things</string>
    <string name="drawer_chats">Chats</string>
    <string name="drawer_my_things">My Things</string>
    <string name="share">Share</string>
    <string name="close_app_title">Close application</string>
    <string name="close_app_content">Do You really want to close this application?</string>

    <!-- Edit Profile Screen -->
    <string name="profile">Profile</string>
    <string name="updating_profile_title">Updating profile</string>
    <string name="updating_profile_content">Hold on, updating profile...</string>
    <string name="profile_updated">Your profile has been updated successfully!</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <!-- Select avatar text -->
    <string name="select_avatar_image">Select avatar image</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_picture">Take a picture</string>
    <string-array name="select_avatar_array">
        <item>@string/choose_from_gallery</item>
        <item>@string/take_picture</item>
    </string-array>

    <!-- Authentication -->
    <string name="hint_email">email address</string>
    <string name="hint_password">password</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_last_name">last name</string>
    <string name="login">login</string>
    <string name="link_to_login">Already registered. Sign in Me!</string>
    <string name="signup_a_new_account">Don\'t have an account? Sign up!</string>
    <string name="signup">Sign Up</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot Your Password? Click here!</string>
    <string name="signup_progress_title">Creating account</string>
    <string name="signup_progress_content">Hold on, Your account is being created!</string>
    <string name="check_your_mail">An e-mail has been sent to you with more information!</string>

    <!-- Error messages -->
    <string name="invalid_email">The email address is invalid!</string>
    <string name="invalid_password">The password is invalid! Your password should contain at least 8 characters,
        one uppercase letter and 2 numbers.</string>
    <string name="invalid_first_name">Invalid first name!</string>
    <string name="invalid_last_name">Invalid last name!</string>

    <string name="or">or</string>

    <!-- Add thing screen -->
    <string name="new_thing">New thing</string>
    <string name="hint_thing_title">Title</string>
    <string name="hint_thing_description">Description</string>
    <string name="select_thing_cover_photo">Add a photo about your stuff!</string>
    <string name="select_thing_description_photos">No additional photos selected :/</string>
    <string name="thing_last_known_location">Last known location:</string>
    <string name="thing_found_location">Found location:</string>
    <string name="publishing_progress">Publishing Your Thing</string>
    <string name="publishing_progress_description">Your thing is getting uploaded. Wait a few seconds...</string>
    <string name="contacts">Contacts:</string>
    <string name="contact">Contact</string>
    <string-array name="thing_type">
        <item>@string/select_type</item>
        <item>@string/type_lost</item>
        <item>@string/type_found</item>
    </string-array>
    <string-array name="thing_type_filter">
        <item>@string/type_any</item>
        <item>@string/type_lost</item>
        <item>@string/type_found</item>
    </string-array>
    <string name="location">Location</string>
    <string name="cover">Cover photo</string>
    <string name="description_photos">Description photos</string>
    <string name="select_type">Select type</string>
    <string name="select_category">Select category</string>
    <string name="category">Category:</string>
    <string name="returned">Returned to the owner:</string>
    <string name="returned_false">Not yet</string>
    <string name="returned_true">Already returned</string>
    <string name="category_any">Any category</string>
    <string name="type_lost">Lost</string>
    <string name="type_found">Found</string>
    <string name="type_any">Any</string>

    <!-- -->
    <string name="edit_thing">Edit Thing</string>
    <string name="delete_thing">Delete Thing</string>
    <array name="my_things_actions">
        <item>@string/edit_thing</item>
        <item>@string/delete_thing</item>
    </array>

    <!-- Thing description screen -->
    <string name="message">Message</string>

    <!-- ChatActivity -->
    <string name="chats">Chats</string>
    <string name="chat_conversations">Chat conversations</string>
    <string name="chat_message_hint">New message here...</string>

    <!-- Search Screen -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search for a thing...</string>
    <string name="filter">Filter</string>
    <string name="confirm_search">Confirm search</string>
    <string name="is_exact_match">Exact match for title?</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="returned_to_the_owner">Show only returned to the owner</string>
    <string name="show_results">Show results</string>
    <string name="type">Type:</string>
    <string name="any">Any</string>
    <string-array name="thing_return_status_filter">
        <item>@string/any</item>
        <item>@string/returned_true</item>
        <item>@string/returned_false</item>
    </string-array>
    <string name="order">Order:</string>

    <!-- Error messages -->
    <string name="error_email_cant_be_blank">Email field can not be blank</string>
    <string name="error_empty_title">Please provide title for your thing!</string>
    <string name="error_google_signin">Could not sign in using Google+</string>
    <string name="error_empty_description">Please provide description for your thing</string>
    <string name="error_select_type">Please, select type</string>
    <string name="error_select_category">Please, select category</string>

    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <string name="found_keys">Keys found on Aigburth Road, Liverpool, between the Maccies and the garage. It’s got two keyrings on as well but I’ve covered them up for the owner to identify.</string>
    <string name="found_ring">Was found at willy’s car wash, near the dog wash side in blacks beach.
Sterling silver ring, has one stone missing and engraving on the inside (must be able to identify what it says!)
Would love to find the owner.</string>
    <string name="lost_cat">Please help get our little baby back to us. Missing since December 20th from Thornton Curtis near Ulceby in North Lincolnshire and only a kitten with little experience of the outdoors.
If you have any information about her or have found her please contact me on 07912 222548 or 07989 150888, she is missed more than I can describe. Please help!</string>
    <string name="lost_donkey">This little donkey escaped from a field in Shildon, County Durham on the morning of December 20th and has unfortunately been hit by a car.
He has a leg injury and is receiving medical treatment but we need your help to track down his owner.
Come on folks it’s Christmas and we need to get this little fellow safely back in his stable before the big day!
Anyone with information about his owner should contact 101.
Thank you</string>

    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="description">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</string>

    <string name="path_chevron_down">M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z</string>
    <string name="path_chevron_up">M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z</string>

    <string name="transition_avatar">transition_avatar</string>
    <string name="transition_description_photo">transition_description_photo</string>
    <string name="transition_description_text">transition_description_text</string>

    <string name="google_web_client_id">1074777416292-6a73597ab06se6j88i8lc2pm78ttq70q.apps.googleusercontent.com</string>
</resources>
