<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_add_thing"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="56dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <EditText
                    android:id="@+id/edt_thing_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_thing_title"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_cover_photo"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/aletta"/>

                <ImageView
                    android:id="@+id/iv_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/close_circle"
                    android:layout_alignTop="@+id/iv_cover_photo"
                    android:layout_alignEnd="@+id/iv_cover_photo"
                    tools:visibility="visible"
                    android:visibility="gone"/>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <EditText
                    android:id="@+id/edt_thing_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_thing_description"
                    android:text="@string/lorem_ipsum"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
            </android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:id="@+id/tv_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_description_photos_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_description_photo">
                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/tv_select_description_photos"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="@dimen/thing_desc_photo_item_size"
                    android:text="@string/select_thing_description_photos"/>
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/fl_map_container"
                android:layout_width="match_parent"
                android:layout_height="150dp">
            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/layout_add_thing_bottom_navigation"/>
</RelativeLayout>